# advent-of-code-2022

./: .gitignore  README.md
day-01/fsharp_evelina/: day01.fsx
day-01/fsharp_fedenanni/: day1.fsx
day-01/fsharp_lannelin/: day_1.fsx
day-01/julia_rchan26/: day_one.ipynb  day_one.jl
day-01/ocaml_markus/: day01.ml  utils.mli
day-01/ocaml_triangle-man/: Makefile  day01.ml
day-01/python_copilot+evelina/: day01.ipynb
day-01/python_matt/: day_01.py
day-01/python_philswatton/: 01_calories.py
day-01/python_radka-j/: day01.py
day-01/python_tomogwen/: solution.py
day-01/racket_triangle-man/: day01-bis.rkt  day01.rkt
day-01/rust_jack/: 01.rs  README.md
day-01/rust_sgreenbury/: Cargo.toml  README.md  copy_from_template.sh
day-02/fsharp_evelina/: day02.fsx
day-02/fsharp_fedenanni/: day2.fsx
day-02/fsharp_lannelin/: day_2.fsx
day-02/julia_rchan26/: day_two.ipynb  day_two.jl
day-02/ocaml_markus/: day02.ml  utils.ml
day-02/python_matt/: day_02.py
day-02/python_philswatton/: 02_rps.py
day-02/python_radka-j/: day02.py
day-02/python_tomogwen/: solution.py
day-02/racket_triangle-man/: day02.rkt
day-02/rust_jack/: 02.rs  README.md
day-02/rust_pwochner/: Cargo.toml
day-02/rust_sgreenbury/: Cargo.toml  README.md
day-03/fsharp_evelinag/: day03.fsx
day-03/fsharp_lannelin/: day_3.fsx
day-03/julia_rchan26/: day_three.jl
day-03/ocaml_markus/: day03.ml  utils.ml
day-03/python_iain-s/: day3.py  test_day3.py
day-03/python_matt/: day_03.py
day-15/rust_sgreenbury/: Cargo.toml  README.md
day-15/rust_sgreenbury/src/: helpers.rs
(+185 files in other folders)
