[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = "0.10"
hashbrown = "0.13"
lazy_static = "1.4"
regex = "1.7"
rayon = "1.6"
# num-traits = "0.2"
num = "0.4"
